--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	height: 4rem;
 	border-bottom: solid 1px #ccc;
